--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head lang="es">
+<html lang="es">
+<head>
 	<meta charset="utf-8">
 	<title>Vayne|Lore, Habilidades, Skin</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="icon" href="imagenes/favico.png" sizes="16x16" type="image/png" >
 
@@ -29,19 +28,19 @@
 							<p>La Cazadora Nocturna</p>
 
 							<dl>
-								<dt><img src="imagenes/estadisticas/vida.jpg">Vida:</dt>
+								<dt><img src="imagenes/estadisticas/vida.jpg" alt="vida">Vida:</dt>
 								<dd>498.44(+83 por nivel)</dd>
-								<dt><img src="imagenes/estadisticas/dañoataque.jpg">Daño de Ataque:</dt>
+								<dt><img src="imagenes/estadisticas/dañoataque.jpg" alt="dañoataque">Daño de Ataque:</dt>
 								<dd>64(+1.66 por nivel)</dd>
-								<dt><img src="imagenes/estadisticas/velocidadataque.jpg">Velocidad de Ataque:</dt>
+								<dt><img src="imagenes/estadisticas/velocidadataque.jpg" alt="veolcidadxnivel">Velocidad de Ataque:</dt>
 								<dd>0.659(+3.3% por nivel)</dd>
-								<dt><img src="imagenes/estadisticas/velocidadmovimiento.jpg">Velocidad de Movimiento:</dt>
+								<dt><img src="imagenes/estadisticas/velocidadmovimiento.jpg" alt="velocidaddemovimiento">Velocidad de Movimiento:</dt>
 								<dd>330</dd>
-								<dt><img src="imagenes/estadisticas/regeneracionvida.jpg">Regeneracion de Vida:</dt>
+								<dt><img src="imagenes/estadisticas/regeneracionvida.jpg" alt="regeneracion">Regeneracion de Vida:</dt>
 								<dd>5.5(+0.55 por nivel)</dd>
-								<dt><img src="imagenes/estadisticas/armadura.jpg">Armadura:</dt>
+								<dt><img src="imagenes/estadisticas/armadura.jpg" alt="armadura">Armadura:</dt>
 								<dd>28(+3.4 por nivel)</dd>
-								<dt><img src="imagenes/estadisticas/resistenciamagica.jpg">Resistencia Magica:</dt>
+								<dt><img src="imagenes/estadisticas/resistenciamagica.jpg" alt="resitenciamagica">Resistencia Magica:</dt>
 								<dd>30(+0.5 por nivel)</dd>
 							</dl>
 						</div>
@@ -53,57 +52,57 @@
 							<br>
 							<p><span>Habilidades</span></p>
 							<div class="hab0">
-								<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
+								<a href="#NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png" alt="NightHunter"></a>
 							</div>
 							<div class="hab1">
-								<a href="#Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
+								<a href="#Tumble"> <img src="imagenes/habilidades/VayneTumble.png" alt="Tumble"></a>
 							</div>
 							<div class="hab2">
-								<a href="#SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a>
+								<a href="#SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png" alt="SilverdBolts"></a>
 							</div>
 							<div class="hab3">
-								<a href="#Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a>
+								<a href="#Condemn"> <img src="imagenes/habilidades/VayneCondemn.png" alt="Condemn"></a>
 							</div>
 							<div class="hab4">
-								<a href="#Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a>
+								<a href="#Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png" alt="Inquisition"></a>
 							</div>
 						</div>
 					</div>
 					<div class="aspecto">
 						<h2>Aspectos</h2>
 							<div class="aspectouno">
-								<img src="imagenes/aspectos/Vayne_0.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_0.jpg" alt="aspecto0" style="width:100%;">
 							</div>
 
 							<div class="aspectodos">
-								<img src="imagenes/aspectos/Vayne_1.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_1.jpg" alt="aspecto1" style="width:100%;">
 							</div>
 
 							<div class="aspectotres">
-								<img src="imagenes/aspectos/Vayne_2.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_2.jpg" alt="aspecto2" style="width:100%;">
 							</div>
 
 							<div class="aspectocuatro">
-								<img src="imagenes/aspectos/Vayne_3.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_3.jpg" alt="aspecto3" style="width:100%;">
 							</div>
 							<div class="aspectocinco">
-								<img src="imagenes/aspectos/Vayne_4.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_4.jpg" alt="aspecto4" style="width:100%;">
 							</div>
 
 							<div class="aspectoseis">
-								<img src="imagenes/aspectos/Vayne_5.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_5.jpg" alt="aspecto5" style="width:100%;">
 							</div>
 
 							<div class="aspectosiete">
-								<img src="imagenes/aspectos/Vayne_6.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_6.jpg" alt="aspecto6" style="width:100%;">
 							</div>
 
 							<div class="aspectoocho">
-								<img src="imagenes/aspectos/Vayne_10.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_10.jpg" alt="aspecto7" style="width:100%;">
 							</div>
 
 							<div class="aspectonueve">
-								<img src="imagenes/aspectos/Vayne_11.jpg" style="width:100%;">
+								<img src="imagenes/aspectos/Vayne_11.jpg" alt="aspecto8" style="width:100%;">
 							</div>
 					</div>
 					<div class="habilidades">
@@ -111,7 +110,7 @@
 
 						<div class="NightHunter">
 							<div class="habilidad0">
-								<a name="NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png"></a>
+								<a id="NightHunter"> <img src="imagenes/habilidades/Vayne_NightHunter.png" alt="habilidad0"></a>
 								<div class="name0">
 								<h3>Cazadora Nocturna</h3>
 								</div>
@@ -128,7 +127,7 @@
 						</div>
 						<div class="VayneTumble">
 							<div class="habilidad1">
-								<a name="Tumble"> <img src="imagenes/habilidades/VayneTumble.png"></a>
+								<a id="Tumble"> <img src="imagenes/habilidades/VayneTumble.png" alt="habilidad1"></a>
 								<div class="name1"> 
 								<h3>Voltereta</h3>
 								</div>
@@ -150,7 +149,7 @@
 						</div>
 						<div class="SilveredBolts">
 							<div class="habilidad2">
-								<a id="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png"></a> 
+								<a id="SilveredBolts"> <img src="imagenes/habilidades/VayneSilveredBolts.png" alt="habilidad2"></a> 
 								<div class="name2">
 								<h3>Proyectiles de Plata</h3>
 								</div>
@@ -173,7 +172,7 @@
 						</div>
 						<div class="Condemn">
 							<div class="habilidad3">
-								<a id="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png"></a> 
+								<a id="Condemn"> <img src="imagenes/habilidades/VayneCondemn.png" alt="habilidad3"></a> 
 								<div class="name3">
 								<h3>Condena</h3>
 								</div>
@@ -197,7 +196,7 @@
 						</div>
 						<div class="Inquisition">
 							<div class="habilidad4">
-								<a name="Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png"></a> 
+								<a id="Inquisition"> <img src="imagenes/habilidades/VayneInquisition.png" alt="habilidad4"></a> 
 								<div class="name4">
 								<h3>Hora Final</h3>
 								</div>
@@ -235,4 +234,4 @@
 	</footer>
 </div>
 </body>
-</html>		
+</html>			
