--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="es">
+<html lang="es"> 
+<head>
 	<meta charset="utf-8">
 	<title>Vayne|Lore, Habilidades, Skin </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
