--- a/historia.html
+++ b/historia.html
@@ -35,7 +35,7 @@
 		<div class="historia1">
 					<h2>Biografia </h2>
 						<div class="retrato">
-						<img src="imagenes/retratodevayne.jpg" width="70px" alt="retrato de vayne">
+						<img src="imagenes/retratodevayne.jpg" width="70" alt="retrato de vayne">
 						</div>
 
     					<p class="estrofa1">Shauna Vayne es una letal e implacable cazadora de monstruos que dedica su vida a encontrar a la demonio que asesinó a su familia. Armada con ballestas instaladas en sus muñecas y un corazón lleno de venganza, Vayne solo es feliz de verdad cuando está asesinando a los practicantes de las artes oscuras o a sus creaciones.<br>
